--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,8 @@ a:visited {
 	font-size: 2.4rem;
 	display: flex;
 	gap: 2.4rem;
-	position: absolute;
-	bottom: 5%;
-	right: 50%;
-	transform: translate(50%);
+	justify-content: center;
+	padding-top: 22rem;
 }
 
 .social-media a:link {
