--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,21 @@ a:visited {
 	width: 70%;
 	margin: 0 auto;
 }
+
+/* scrolling */
+
+@media screen and (prefers-reduced-motion: no-preference) {
+	html {
+		scroll-snap-type: y mandatory;
+	}
+}
+
+.hero,
+.section-projects,
+.section-contact {
+	scroll-snap-align: start;
+}
+
 /* HERO */
 
 .hero {
@@ -40,7 +55,7 @@ a:visited {
 	height: 10vh;
 	padding-top: 6rem;
 	padding-right: 12rem;
-	padding-left: 12rem;
+	padding-left: 6rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -59,7 +74,7 @@ a:visited {
 
 .main-nav a:link,
 .main-nav a:visited {
-	font-size: 3.2rem;
+	font-size: 2.4rem;
 	transition: 200ms ease;
 	position: relative;
 }
@@ -89,7 +104,7 @@ a:visited {
 	justify-content: center;
 	/* align-items: center; */
 	flex-direction: column;
-	gap: 1.2rem;
+	gap: 2.4rem;
 	padding-top: 16rem;
 	height: 50vh;
 }
@@ -140,6 +155,11 @@ a:visited {
 
 /* PROJECTS */
 
+.page-number-2 {
+	padding-top: 6rem;
+	padding-left: 6rem;
+}
+
 .section-projects {
 	height: 100vh;
 }
@@ -148,7 +168,14 @@ a:visited {
 	display: flex;
 	flex-direction: column;
 	gap: 1.2rem;
-	padding-top: 16rem;
+	padding-top: 8rem;
 	font-weight: 900;
 	font-size: 8rem;
+}
+
+/* CONTACT */
+
+.section-contact {
+	height: 100vh;
+	background-color: #f4ead7;
 }
