--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ a:visited {
 	margin: 0 auto;
 }
 
+.break {
+	display: block;
+}
+
 /* scrolling */
 
 @media screen and (prefers-reduced-motion: no-preference) {
@@ -69,7 +73,7 @@ a:visited {
 .main-nav ul {
 	display: flex;
 	align-items: center;
-	gap: 12rem;
+	gap: 6rem;
 }
 
 .main-nav a:link,
@@ -77,10 +81,11 @@ a:visited {
 	font-size: 2.4rem;
 	transition: 200ms ease;
 	position: relative;
+	color: rgba(29, 41, 57, 0.25);
 }
 .main-nav a:hover,
 .main-nav a:active {
-	/* color: hsl(214, 33%, 47%); */
+	color: #1d2939;
 }
 
 .main-nav a::after {
@@ -90,13 +95,19 @@ a:visited {
 	height: 3px;
 	width: 0%;
 	left: 0;
-	bottom: -5px;
+	bottom: -3px;
 	transition: 200ms;
 }
 .main-nav a:hover::after {
 	width: 100%;
 }
 
+.main-nav ul li .active {
+	color: #1d2939;
+	border-bottom: 3px solid #1d2939;
+	width: 100%;
+	border-radius: 1px;
+}
 /* text hero */
 
 .text-hero {
@@ -104,7 +115,7 @@ a:visited {
 	justify-content: center;
 	/* align-items: center; */
 	flex-direction: column;
-	gap: 2.4rem;
+	gap: 3.6rem;
 	padding-top: 16rem;
 	height: 50vh;
 }
@@ -171,7 +182,7 @@ a:visited {
 	padding-top: 8rem;
 	font-weight: 900;
 	font-size: 8rem;
-	height: 50vh;
+	margin-bottom: 9.6rem;
 }
 
 /* CONTACT */
@@ -179,4 +190,145 @@ a:visited {
 .section-contact {
 	height: 100vh;
 	background-color: #f4ead7;
+}
+
+.contact-content {
+	display: flex;
+	gap: 6.8rem;
+}
+
+.contact-content > * {
+	width: 50%;
+}
+
+/* .contact-text {
+	width: 60%;
+}
+
+.form {
+	width: 40%;
+} */
+
+.contact-title {
+	height: 20%;
+	display: flex;
+	justify-content: end;
+	flex-direction: column;
+}
+.contact-title h3,
+.form h3 {
+	font-size: 2.4rem;
+	text-transform: uppercase;
+	letter-spacing: 10px;
+	font-weight: 500;
+	line-height: 1.5;
+}
+
+.big-word {
+	font-size: 6.8rem;
+	font-weight: 300;
+}
+
+.underline {
+	text-decoration: underline;
+}
+.contact-text h4 {
+	font-size: 2.4rem;
+	text-transform: uppercase;
+	letter-spacing: 10px;
+	font-weight: 500;
+	margin-bottom: 1.2rem;
+}
+.line {
+	width: 95%;
+	height: 1px;
+	background-color: #1d2939;
+	margin-bottom: 2.4rem;
+}
+
+.contact-text p {
+	font-size: 1.8rem;
+	line-height: 2;
+	width: 95%;
+	color: #292e35;
+	margin-bottom: 1.4rem;
+}
+
+/* some contact */
+.contact-social-media {
+	font-size: 2.4rem;
+	display: flex;
+	gap: 2.4rem;
+	align-items: flex-end;
+	margin-top: 4rem;
+}
+
+.contact-social-media a:link {
+	transition: 400ms ease;
+}
+
+.contact-social-media a:hover {
+	transform: scale(1.15);
+}
+
+/* FORM */
+
+.top-row {
+	display: flex;
+	flex-direction: row;
+	gap: 2.4rem;
+}
+
+input {
+	border: none;
+	padding: 1.2rem;
+	margin-bottom: 1.2rem;
+	flex-basis: 50%;
+	border: 1px solid transparent;
+}
+
+textarea {
+	display: block;
+
+	padding: 1.2rem;
+	width: 100%;
+	text-align: left;
+	margin-bottom: 2.4rem;
+	resize: none;
+	border: none;
+	font-family: 'Inter', sans-serif;
+	font-size: 1.2rem;
+	border: 1px solid transparent;
+}
+
+input:focus,
+textarea:focus {
+	outline: none !important;
+	border: 1px solid #1d2939;
+}
+
+form button {
+	border: none;
+	background-color: #1d2939;
+	color: #fff;
+	text-transform: uppercase;
+	width: 100%;
+	padding: 1.2rem 0;
+	cursor: pointer;
+	font-size: 1.8rem;
+	font-weight: 500;
+	letter-spacing: 1px;
+	transition: 300ms ease;
+}
+form button:hover {
+	border: none;
+	background-color: #324763;
+	color: #fff;
+	text-transform: uppercase;
+	width: 100%;
+	padding: 1.2rem 0;
+	cursor: pointer;
+	font-size: 1.8rem;
+	font-weight: 500;
+	letter-spacing: 1px;
 }
