add AOS functionality to contact page

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ a:visited {
 
 .section-contact {
 	height: 100vh;
-	background-color: #f4ead7;
+	background-color: #d7f1cb;
 }
 
 .contact-content {
