--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a:visited {
 .text-hero {
 	display: flex;
 	justify-content: center;
-	/* align-items: center; */
+	align-items: center;
 	flex-direction: column;
 	gap: 3.6rem;
 	padding-top: 16rem;
@@ -135,6 +135,7 @@ a:visited {
 	font-size: 1.6rem;
 	text-transform: uppercase;
 	letter-spacing: 20px;
+	margin-right: -20px;
 	display: flex;
 	justify-content: center;
 }
@@ -182,7 +183,7 @@ a:visited {
 	padding-top: 8rem;
 	font-weight: 900;
 	font-size: 8rem;
-	margin-bottom: 9.6rem;
+	margin-bottom: 4.8rem;
 }
 
 /* CONTACT */
@@ -190,6 +191,10 @@ a:visited {
 .section-contact {
 	height: 100vh;
 	background-color: #d7f1cb;
+}
+
+.contact-container {
+	height: 90vh;
 }
 
 .contact-content {
@@ -214,12 +219,13 @@ a:visited {
 	display: flex;
 	justify-content: end;
 	flex-direction: column;
+	margin-bottom: 2.4rem;
 }
 .contact-title h3,
 .form h3 {
 	font-size: 2.4rem;
 	text-transform: uppercase;
-	letter-spacing: 10px;
+	letter-spacing: 5px;
 	font-weight: 500;
 	line-height: 1.5;
 }
@@ -240,10 +246,9 @@ a:visited {
 	margin-bottom: 1.2rem;
 }
 .line {
-	width: 95%;
+	width: 100%;
 	height: 1px;
 	background-color: #1d2939;
-	margin-bottom: 2.4rem;
 }
 
 .contact-text p {
@@ -260,7 +265,7 @@ a:visited {
 	display: flex;
 	gap: 2.4rem;
 	align-items: flex-end;
-	margin-top: 4rem;
+	margin-top: 2.4rem;
 }
 
 .contact-social-media a:link {
@@ -275,15 +280,14 @@ a:visited {
 
 .top-row {
 	display: flex;
-	flex-direction: row;
-	gap: 2.4rem;
+	gap: 1.2rem;
 }
 
 input {
 	border: none;
 	padding: 1.2rem;
 	margin-bottom: 1.2rem;
-	flex-basis: 50%;
+	width: 50%;
 	border: 1px solid transparent;
 }
 
@@ -293,7 +297,7 @@ textarea {
 	padding: 1.2rem;
 	width: 100%;
 	text-align: left;
-	margin-bottom: 2.4rem;
+	margin-bottom: 1.2rem;
 	resize: none;
 	border: none;
 	font-family: 'Inter', sans-serif;
@@ -321,14 +325,6 @@ form button {
 	transition: 300ms ease;
 }
 form button:hover {
-	border: none;
 	background-color: #324763;
 	color: #fff;
-	text-transform: uppercase;
-	width: 100%;
-	padding: 1.2rem 0;
-	cursor: pointer;
-	font-size: 1.8rem;
-	font-weight: 500;
-	letter-spacing: 1px;
 }
