--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,15 @@
 
 html {
 	font-size: 62.5%;
+	height: -webkit-fill-available;
 }
 
 body {
 	font-family: 'Inter', sans-serif;
 	color: #1d2939;
 	overflow-x: hidden;
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
 }
 
 /* GENERAL STYLES */
