--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ body {
 	font-family: 'Inter', sans-serif;
 	color: #1d2939;
 	overflow-x: hidden;
-	height: 100vh;
-	height: -webkit-fill-available;
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
 }
 
 /* GENERAL STYLES */
