--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ a:visited {
 /* CONTACT */
 
 .section-contact {
-	min-height: 100vh;
+	min-height: 100%;
 	background-color: #d7f1cb;
 	position: relative;
 }
