disable snap scroll

--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,11 @@ a:visited {
 
 /* SNAP SCROLL */
 
-.hero,
+/* .hero,
 .section-projects,
 .section-contact {
 	scroll-snap-align: start;
-}
+} */
 
 /* HERO */
 
