--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,13 @@ a:visited {
 }
 
 /* scrolling */
-
+/* 
 @media screen and (prefers-reduced-motion: no-preference) {
 	html {
 		-ms-scroll-snap-type: y mandatory;
 		scroll-snap-type: y mandatory;
 	}
-}
+} */
 
 /* SNAP SCROLL */
 
