--- a/css/queries.css
+++ b/css/queries.css
@@ -2,6 +2,10 @@
 	.text-hero h1 {
 		font-size: 18rem;
 	}
+
+	.text-hero h3 {
+		margin-bottom: 25rem;
+	}
 	.small-title {
 		font-size: 12rem;
 	}
@@ -52,6 +56,9 @@
 	.text-hero h1 {
 		font-size: 16rem;
 		margin-bottom: 3.6rem;
+	}
+	.text-hero h3 {
+		margin-bottom: 30rem;
 	}
 	.small-title {
 		font-size: 8rem;
@@ -114,7 +121,7 @@
 		margin-right: -20px;
 		display: flex;
 		justify-content: center;
-		margin-bottom: 15rem;
+		margin-bottom: 32rem;
 	}
 
 	.main-nav {
@@ -153,5 +160,9 @@
 
 	.page-number {
 		display: none;
+	}
+
+	.text-hero h3 {
+		margin-bottom: 40rem;
 	}
 }
