--- a/css/reset.css
+++ b/css/reset.css
@@ -139,15 +139,14 @@ table {
 }
 * {
 	margin: 0;
-}
-html,
-body {
-	height: 100%;
+	padding: 0;
 }
 html {
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 body {
+	min-height: 100vh;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 }
