--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ a:visited {
 	background-color: #f4ead7;
 	min-height: 100vh;
 	position: relative;
+	display: flex;
+	flex-direction: column;
 }
 
 /* nav */
@@ -152,7 +154,10 @@ a:visited {
 	font-size: 2.4rem;
 	display: flex;
 	gap: 2.4rem;
-	margin-bottom: 4.8rem;
+	flex-grow: 1;
+	justify-content: center;
+	align-items: flex-end;
+	padding-bottom: 3rem;
 }
 
 .social-media a:link {
