add viewport fix to body element

--- a/css/reset.css
+++ b/css/reset.css
@@ -146,7 +146,8 @@ html {
 	scroll-behavior: smooth;
 }
 body {
-	min-height: 100vh;
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 }
