--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ a:visited {
 
 .hero {
 	background-color: #f4ead7;
-	min-height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
 	/* height: calc(var(--vh, 1vh) * 100); */
 	position: relative;
 	display: flex;
