--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a:visited {
 .hero {
 	background-color: #f4ead7;
 	min-height: 100vh;
-	min-height: -webkit-fill-available;
+	/* min-height: -webkit-fill-available; */
 	/* height: calc(var(--vh, 1vh) * 100); */
 	position: relative;
 	display: flex;
@@ -183,7 +183,7 @@ a:visited {
 
 .section-projects {
 	min-height: 100vh;
-	min-height: -webkit-fill-available;
+	/* min-height: -webkit-fill-available; */
 	position: relative;
 }
 
@@ -201,7 +201,7 @@ a:visited {
 
 .section-contact {
 	min-height: 100vh;
-	min-height: -webkit-fill-available;
+	/* min-height: -webkit-fill-available; */
 	background-color: #d7f1cb;
 	position: relative;
 }
