--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,8 @@ a:visited {
 
 .hero {
 	background-color: #f4ead7;
-	min-height: 100vh;
-	min-height: -webkit-fill-available;
-	/* height: calc(var(--vh, 1vh) * 100); */
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -229,7 +228,7 @@ a:visited {
 
 .contact-title {
 	display: flex;
-	justify-content: end;
+	justify-content: flex-end;
 	flex-direction: column;
 	margin-bottom: 2.4rem;
 }
