--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ a:visited {
 	min-height: 100vh;
 	/* min-height: -webkit-fill-available; */
 	position: relative;
+	background-color: rgb(247, 247, 247);
 }
 
 .title {
@@ -204,6 +205,44 @@ a:visited {
 	font-weight: 900;
 	font-size: 8rem;
 	margin-bottom: 4.8rem;
+}
+
+.projects-container {
+	display: flex;
+	gap: 2.4rem;
+	width: 70%;
+	margin: 0 auto;
+}
+
+.project-card {
+	width: 33.333%;
+	height: 500px;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	border-radius: 10px;
+}
+
+.project-card img {
+	margin-bottom: 1.2rem;
+}
+
+.project-card-text {
+	padding: 0 2.4rem;
+}
+
+.project-card h3 {
+	font-size: 2.4rem;
+	font-weight: 700;
+	margin-bottom: 0.6rem;
+}
+
+.project-card p {
+	font-size: 1.6rem;
+	margin-bottom: 2.4rem;
+}
+
+.project-card a {
+	font-size: 1.6rem;
+	text-decoration: underline;
 }
 
 /* CONTACT */
