--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,11 @@
 	color: #f7f7f7;
 }
 
+.navbar-menu,
+.particles-wrapper {
+	display: none;
+}
+
 .skills img {
 	width: 3rem;
 }
@@ -32,4 +37,50 @@ canvas {
 }
 
 #tsparticles {
+}
+
+@media screen and (max-width: 900px) {
+	.navbar-desktop {
+		display: none;
+	}
+	.navbar-menu {
+		width: 35px;
+		height: 35px;
+		border-radius: 50%;
+		position: relative;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.open-icon {
+		width: 70%;
+		height: 70%;
+	}
+
+	.close-icon {
+		width: 35px;
+		height: 35px;
+		position: absolute;
+		right: 20px;
+		color: #1d2939;
+	}
+
+	.navbar-menu div {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		z-index: 5;
+		padding: 1rem;
+		width: 50%;
+		height: 100vh;
+		display: flex;
+		padding-bottom: 2rem;
+
+		background-color: #f7f7f7;
+
+		box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+	}
 }
