--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,3 +106,11 @@ canvas {
 ::-webkit-scrollbar-thumb:hover {
 	background-color: rgba(12, 6, 59, 0.6);
 }
+
+/* contact-form button icons */
+
+.contact-button-icons {
+	width: 15;
+	height: 15;
+	color: #f7f7f7;
+}
