add staggering, modify stuff for mobile responsiveness, remove  particles in about section on small  mobiles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,7 @@ html {
 .skills img,
 .skills svg,
 .skills i {
-	width: 3rem;
+	width: 2.8rem;
 	cursor: pointer;
 	font-size: 3rem;
 }
@@ -28,6 +28,25 @@ html {
 	font-size: 3.6rem;
 }
 
+@media screen and (max-width: 1280px) {
+	.skills img,
+	.skills svg,
+	.skills i {
+		width: 2.6rem;
+		cursor: pointer;
+		font-size: 2rem;
+	}
+}
+
+@media screen and (max-width: 1042px) {
+	.skills img,
+	.skills svg,
+	.skills i {
+		width: 2.4rem;
+		cursor: pointer;
+		font-size: 2rem;
+	}
+}
 @media screen and (max-width: 640px) {
 	.skills img,
 	.skills svg,
@@ -63,9 +82,6 @@ canvas {
 	position: absolute;
 	z-index: -1;
 	background-color: #1d2939;
-}
-
-#tsparticles {
 }
 
 @media screen and (max-width: 900px) {
