modify project modal width so that it fits shorter screens, fix particles background on shorter monitors, by setting height to 400% (quick fix)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,11 @@ canvas {
 	position: absolute;
 	z-index: -1;
 	background-color: #1d2939;
+	height: 400% !important;
+}
+
+#tsparticles {
+	background-color: #1d2939;
 }
 
 /* Scrollbar */
